--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -39,7 +39,7 @@ jobs:
           fi
           echo ::set-env name=PATH::/opt/arm-linux-musleabihf-cross/bin:$PATH
       # Rust musl cross toolchain aarch64
-      - name: Rust musl cross toolchain
+      - name: Rust musl cross toolchain aarch64
         run: |
           if ! test -d /opt/aarch64-linux-musl-cross/bin; then
             wget https://more.musl.cc/$(uname -m)-linux-musl/aarch64-linux-musl-cross.tgz
@@ -82,8 +82,8 @@ jobs:
         with:
           name: pisugar-debs
           path: |
-            target/*/debian/*.deb
-            target/*/release/rpmbuild/RPMS/*.rpm
+            target/**/debian/*.deb
+            target/**/release/rpmbuild/RPMS/**/*.rpm
             scripts/*
 
       # Development Release
@@ -95,8 +95,8 @@ jobs:
           prerelease: true
           draft: false
           files: |
-            target/*/debian/*.deb
-            target/*/release/rpmbuild/RPMS/*.rpm
+            target/**/debian/*.deb
+            target/**/release/rpmbuild/RPMS/**/*.rpm
             scripts/*
 
       # Upload QiNiu nightly
