--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
           fi
           echo ::set-env name=PATH::/opt/arm-linux-musleabihf-cross/bin:$PATH
       # Rust musl cross toolchain aarch64
-      - name: Rust musl cross toolchain
+      - name: Rust musl cross toolchain aarch64
         run: |
           if ! test -d /opt/aarch64-linux-musl-cross/bin; then
             wget https://more.musl.cc/$(uname -m)-linux-musl/aarch64-linux-musl-cross.tgz
@@ -83,8 +83,8 @@ jobs:
         with:
           name: pisugar-debs
           path: |
-            target/*/debian/*.deb
-            target/*/release/rpmbuild/RPMS/*.rpm
+            target/**/debian/*.deb
+            target/**/release/rpmbuild/RPMS/**/*.rpm
             scripts/*
 
       # Draft Release
@@ -94,8 +94,8 @@ jobs:
           prerelease: false
           draft: true
           files: |
-            target/*/debian/*.deb
-            target/*/release/rpmbuild/RPMS/*.rpm
+            target/**/debian/*.deb
+            target/**/release/rpmbuild/RPMS/**/*.rpm
             scripts/*
 
       # Upload QiNiu nightly
