--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v1
         with:
-          name: pisugar-debs
+          name: pisugar-artifacts
           path: |
             target/**/debian/*.deb
             target/**/release/rpmbuild/RPMS/**/*.rpm
