--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -112,6 +112,8 @@ jobs:
         with:
           name: pisugar-artifacts
           path: |
-            target/**/debian/*.deb
-            target/**/release/rpmbuild/RPMS/**/*.rpm
+            target/aarch64-unknown-linux-musl/debian/*
+            target/arm-unknown-linux-musleabihf/debian/*
+            target/aarch64-unknown-linux-musl/release/rpmbuild/RPMS/aarch64/*
+            target/arm-unknown-linux-musleabihf/release/rpmbuild/RPMS/armv7hl/*
             scripts/*
