--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,8 +84,10 @@ jobs:
         with:
           name: pisugar-artifacts
           path: |
-            target/**/debian/*.deb
-            target/**/release/rpmbuild/RPMS/**/*.rpm
+            target/aarch64-unknown-linux-musl/debian/*
+            target/arm-unknown-linux-musleabihf/debian/*
+            target/aarch64-unknown-linux-musl/release/rpmbuild/RPMS/aarch64/*
+            target/arm-unknown-linux-musleabihf/release/rpmbuild/RPMS/armv7hl/*
             scripts/*
 
       # Draft Release
@@ -95,8 +97,10 @@ jobs:
           prerelease: false
           draft: true
           files: |
-            target/**/debian/*.deb
-            target/**/release/rpmbuild/RPMS/**/*.rpm
+            target/aarch64-unknown-linux-musl/debian/*
+            target/arm-unknown-linux-musleabihf/debian/*
+            target/aarch64-unknown-linux-musl/release/rpmbuild/RPMS/aarch64/*
+            target/arm-unknown-linux-musleabihf/release/rpmbuild/RPMS/armv7hl/*
             scripts/*
 
       # Upload QiNiu nightly
