--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -110,16 +110,17 @@ jobs:
       - run: find $(pwd) -name '*.rpm'
 
       # Upload artifact
-      # - name: Upload artifacts
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: pisugar-artifacts
-      #     path: |
-      #       target/arm-unknown-linux-musleabihf/debian/*
-      #       target/aarch64-unknown-linux-musl/debian/*
-      #       target/arm-unknown-linux-musleabihf/release/rpmbuild/RPMS/armv7hl/*
-      #       target/aarch64-unknown-linux-musl/release/rpmbuild/RPMS/aarch64/*
-      #       scripts/*
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: pisugar-artifacts
+          path: |
+            target/arm-unknown-linux-musleabihf/debian/*
+            target/aarch64-unknown-linux-musl/debian/*
+            target/arm-unknown-linux-musleabihf/release/rpmbuild/RPMS/armv7hl/*
+            target/aarch64-unknown-linux-musl/release/rpmbuild/RPMS/aarch64/*
+            scripts/*
+          if-no-files-found: warn
 
       # Development Release
       - uses: "marvinpinto/action-automatic-releases@latest"
