--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -125,8 +125,7 @@ jobs:
           fi
           chmod +x qshell
           ./qshell account -w ${QINIU_AK} ${QINIU_SK} deploy-account
-
-          for f in $(find target/arm-unknown-linux-musleabihf -name '*.deb' ); do
+          for f in $(find target -type f -name '*.deb') $(find target -type f -name '*.rpm'); do
             filename=${f##*/}
             key=nightly/${filename}
             ./qshell rput --overwrite ${QINIU_BUCKET} ${key} ${f}
