--- a/pisugar-server/Cargo.toml
+++ b/pisugar-server/Cargo.toml
@@ -16,16 +16,16 @@ bytes = "1"
 ctrlc = "3.1.4"
 serde = { version = "1.0", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
-tokio = { version = "0.2", features = ["full"] }
-tokio-util = "0.3.1"
-tokio-tungstenite = "0.10.1"
+tokio = { version = "1.8", features = ["full"] }
+tokio-util = "0.6"
+tokio-tungstenite = "0.14"
 futures = "0.3.5"
 futures-util = "0.3.5"
 futures-channel = "0.3.5"
-hyper = "0.13"
-hyper-staticfile = "0.5.1"
-hyper-websocket-lite = "0.3.4"
-websocket-codec = "0.3.4"
+hyper = {version ="0.14.4", features = ["client", "server", "tcp"]}
+hyper-staticfile = "0.6"
+hyper-websocket-lite = "0.5"
+websocket-codec = "0.5"
 pisugar-core = { path = "../pisugar-core" }
 
 [[bin]]
