feat: PiSugar 3 initial support

--- a/.cargo/config
+++ b/.cargo/config
@@ -1,11 +1,14 @@
 [source.crates-io]
-replace-with = "tuna"
+replace-with = "sjtu"
 
 [source.ustc]
-registry = "git://mirrors.ustc.edu.cn/crates.io-index"
+registry = "https://mirrors.ustc.edu.cn/crates.io-index"
 
 [source.tuna]
 registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"
+
+[source.sjtu]
+registry = "https://mirrors.sjtug.sjtu.edu.cn/git/crates.io-index/"
 
 [build]
 target = "arm-unknown-linux-musleabihf"
