chore: Do not create _ws.json
To fix https://github.com/PiSugar/PiSugar/issues/12#issuecomment-962653432 , standalone websocket port should be recorded in memory.

--- a/pisugar-server/Cargo.toml
+++ b/pisugar-server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pisugar-server"
-version = "1.6.1"
+version = "1.6.2"
 authors = ["PiSugar"]
 edition = "2018"
 description = "PiSugar Power Manager"
@@ -14,6 +14,7 @@ libc = "0.2"
 clap = "2"
 bytes = "1"
 ctrlc = "3.1.4"
+lazy_static = "1.4"
 serde = { version = "1.0", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "1.8", features = ["full"] }
