--- a/pisugar-core/Cargo.toml
+++ b/pisugar-core/Cargo.toml
@@ -4,6 +4,7 @@ version = "1.6.2"
 authors = ["PiSugare"]
 edition = "2018"
 license = "gplv3"
+homepage = "https://github.com/PiSugar/pisugar-power-manager-rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
