--- a/pisugar-poweroff/Cargo.toml
+++ b/pisugar-poweroff/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["PiSugar"]
 edition = "2018"
 description = "PiSugar Poweroff"
 license = "GPLv3"
+homepage = "https://github.com/PiSugar/pisugar-power-manager-rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
