--- a/scripts/aur/PKGBUILD
+++ b/scripts/aur/PKGBUILD
@@ -3,7 +3,7 @@ pkgname=pisugar-bin
 pkgver=1.6.2
 pkgrel=1
 pkgdesc="PiSugar"
-arch=('arm' 'armv7h' 'aarch64' 'x86_64')
+arch=('arm' 'armv7h' 'aarch64')
 url="https://github.com/PiSugar/pisugar-power-manager-rs"
 license=('GPL')
 groups=()
