--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -58,7 +58,7 @@ jobs:
       - run: |
           LIBGCC=$(find /opt/aarch64-linux-musl-cross -name libgcc.a)
           echo $LIBGCC
-          sed -e "s|\"/opt/aarch64-linux-musl-cross/lib/gcc/aarch64-linux-musl/9.2.1\"|\"${LIBGCC%/*}\"|" -i .cargo/config
+          sed -e "s|\"/opt/aarch64-linux-musl-cross/.*\"|\"${LIBGCC%/*}\"|" -i .cargo/config
           cat .cargo/config
 
       # Rust toolchain
@@ -95,6 +95,9 @@ jobs:
       - run: (cd pisugar-programmer && cargo rpm build --target arm-unknown-linux-musleabihf)
       - run: (cd pisugar-programmer && cargo rpm build --target aarch64-unknown-linux-musl)
 
+      # aur for archlinux
+      - run: (cd scripts/aur; sh build-aur.sh)
+
       - run: find $(pwd) -name '*.deb'
       - run: find $(pwd) -name '*.rpm'
 
@@ -111,6 +114,7 @@ jobs:
             target/arm-unknown-linux-musleabihf/release/rpmbuild/RPMS/armv7hl/*
             target/aarch64-unknown-linux-musl/release/rpmbuild/RPMS/aarch64/*
             scripts/*
+            scripts/aur/*.tar.gz
           if-no-files-found: warn
 
       # Development Release
@@ -129,6 +133,7 @@ jobs:
             target/arm-unknown-linux-musleabihf/release/rpmbuild/RPMS/armv7hl/*
             target/aarch64-unknown-linux-musl/release/rpmbuild/RPMS/aarch64/*
             scripts/*
+            scripts/aur/*.tar.gz
 
       # Upload QiNiu nightly
       - name: "Upload to QiNiu"
@@ -152,7 +157,7 @@ jobs:
           chmod +x qshell
           ./qshell account -w ${QINIU_AK} ${QINIU_SK} deploy-account
 
-          for f in $(find target -type f -name '*.deb') $(find target -type f -name '*.rpm'); do
+          for f in $(find target -type f -name '*.deb') $(find target -type f -name '*.rpm') $(find scripts -name '*.tar.gz'); do
             filename=${f##*/}
             key=nightly/${filename}
             ./qshell rput --overwrite ${QINIU_BUCKET} ${key} ${f}
