--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,7 +59,7 @@ jobs:
       - run: |
           LIBGCC=$(find /opt/aarch64-linux-musl-cross -name libgcc.a)
           echo $LIBGCC
-          sed -e "s|\"/opt/aarch64-linux-musl-cross/lib/gcc/aarch64-linux-musl/9.2.1\"|\"${LIBGCC%/*}\"|" -i .cargo/config
+          sed -e "s|\"/opt/aarch64-linux-musl-cross/.*\"|\"${LIBGCC%/*}\"|" -i .cargo/config
           cat .cargo/config
 
       # Rust toolchain
@@ -96,6 +96,9 @@ jobs:
       - run: (cd pisugar-programmer && cargo rpm build --target arm-unknown-linux-musleabihf)
       - run: (cd pisugar-programmer && cargo rpm build --target aarch64-unknown-linux-musl)
 
+      # aur for archlinux
+      - run: (cd scripts/aur; sh build-aur.sh)
+
       - run: find $(pwd) -name '*.deb'
       - run: find $(pwd) -name '*.rpm'
 
@@ -112,6 +115,7 @@ jobs:
             target/arm-unknown-linux-musleabihf/release/rpmbuild/RPMS/armv7hl/*
             target/aarch64-unknown-linux-musl/release/rpmbuild/RPMS/aarch64/*
             scripts/*
+            scripts/aur/*.tar.gz
           if-no-files-found: warn
 
       # Draft Release
@@ -128,6 +132,7 @@ jobs:
             target/arm-unknown-linux-musleabihf/release/rpmbuild/RPMS/armv7hl/*
             target/aarch64-unknown-linux-musl/release/rpmbuild/RPMS/aarch64/*
             scripts/*
+            scripts/aur/*.tar.gz
 
       # Upload QiNiu nightly
       - name: "Upload to QiNiu"
@@ -150,7 +155,7 @@ jobs:
           fi
           chmod +x qshell
           ./qshell account -w ${QINIU_AK} ${QINIU_SK} deploy-account
-          for f in $(find target -type f -name '*.deb') $(find target -type f -name '*.rpm'); do
+          for f in $(find target -type f -name '*.deb') $(find target -type f -name '*.rpm') $(find scripts -name '*.tar.gz'); do
             filename=${f##*/}
             key=nightly/${filename}
             ./qshell rput --overwrite ${QINIU_BUCKET} ${key} ${f}
