--- a/pisugar-server/Cargo.toml
+++ b/pisugar-server/Cargo.toml
@@ -12,6 +12,8 @@ repository = "https://github.com/PiSugar/pisugar-power-manager-rs"
 log = "0.4.8"
 env_logger = "0.9"
 syslog = "5"
+rand = "0.8"
+base64 = "0.13"
 libc = "0.2"
 clap = "2"
 bytes = "1"
@@ -29,6 +31,7 @@ hyper = {version ="0.14.4", features = ["client", "server", "tcp"]}
 hyper-staticfile = "0.6"
 hyper-websocket-lite = "0.5"
 websocket-codec = "0.5"
+digest_auth = "0.3.0"
 pisugar-core = { path = "../pisugar-core" }
 
 [[bin]]
