--- a/scripts/aur/PKGBUILD
+++ b/scripts/aur/PKGBUILD
@@ -3,7 +3,7 @@ pkgname=pisugar-bin
 pkgver=1.6.2
 pkgrel=1
 pkgdesc="PiSugar"
-arch=('arm' 'armv7h' 'aarch64')
+arch=('arm' 'armv7h' 'aarch64' 'x86_64')
 url="https://github.com/PiSugar/pisugar-power-manager-rs"
 license=('GPL')
 groups=()
@@ -19,32 +19,19 @@ install=pisugar-bin.install
 changelog=
 source=("${pkgname}_${pkgver}_all.tar.gz")
 noextract=()
-md5sums=()
-
-prepare() {
-    echo "prepare"
-}
-
-build() {
-    echo "build"
-}
-
-check() {
-    echo "check"
-}
 
 package() {
-    if -d $CARCH ; then
-        cd "$CARCH"
-        install -Dm755 pisugar-server -t "$pkgdir/usr/bin/"
-        install -Dm644 pisugar-server.default -t "$pkgdir/etc/default"
-        install -Dm644 pisugar-server.service -t "$pkgdir/lib/systemd/system"
-        install -Dm644 config.json -t "$pkgdir/etc/pisugar-server"
-        install -Dm644 web -t "$pkgdir/usr/share/pisugar-server"
-        install -Dm644 _ws.json -t "$pkgdir/usr/share/pisugar-server"
-        install -Dm755 pisugar-poweroff -t "$pkgdir/usr/bin/"
-        install -Dm644 pisugar-poweroff.default -t "$pkgdir/etc/default"
-        install -Dm644 pisugar-poweroff.service -t "$pkgdir/lib/systemd/system"
-        install -Dm755 pisugar-programmer -t "$pkgdir/usr/bin/"
-    fi
+    cd "$CARCH"
+    install -Dm755 pisugar-server -t "$pkgdir/usr/bin/"
+    install -Dm644 pisugar-server.default -t "$pkgdir/etc/default"
+    install -Dm644 pisugar-server.service -t "$pkgdir/usr/lib/systemd/system"
+    install -Dm644 config.json -t "$pkgdir/etc/pisugar-server"
+    mkdir -p "$pkgdir/usr/share/pisugar-server"
+    cp -r web "$pkgdir/usr/share/pisugar-server"
+    chmod -R 0644 "$pkgdir/usr/share/pisugar-server/web"
+    install -Dm644 _ws.json -t "$pkgdir/usr/share/pisugar-server/web"
+    install -Dm755 pisugar-poweroff -t "$pkgdir/usr/bin/"
+    install -Dm644 pisugar-poweroff.default -t "$pkgdir/etc/default"
+    install -Dm644 pisugar-poweroff.service -t "$pkgdir/usr/lib/systemd/system"
+    install -Dm755 pisugar-programmer -t "$pkgdir/usr/bin/"
 }
