--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -105,7 +105,7 @@ jobs:
           for arch in arm-unknown-linux-musleabi arm-unknown-linux-musleabi aarch64-unknown-linux-musl x86_64-unknown-linux-gnu; do
             rustup target add $arch
             cargo build --target $arch --release
-            for app in server poseroff programmer; do
+            for app in server poweroff programmer; do
               cargo deb --target $arch --manifest-path=pisugar-$app/Cargo.toml
               (cd pisugar-$app && cargo rpm build --target $arch)
             done
