--- a/pisugar-server/Cargo.toml
+++ b/pisugar-server/Cargo.toml
@@ -11,24 +11,24 @@ repository = "https://github.com/PiSugar/pisugar-power-manager-rs"
 [dependencies]
 log = "0.4.8"
 env_logger = "0.9"
-syslog = "5"
+syslog = "6"
 rand = "0.8"
 base64 = "0.13"
 libc = "0.2"
-clap = "2"
+clap = "3"
 bytes = "1"
 ctrlc = "3.1.4"
 lazy_static = "1.4"
 serde = { version = "1.0", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "1.8", features = ["full"] }
-tokio-util = "0.6"
-tokio-tungstenite = "0.14"
+tokio-util = {version = "0.7", features = ["codec"]}
+tokio-tungstenite = "0.17"
 futures = "0.3.5"
 futures-util = "0.3.5"
 futures-channel = "0.3.5"
 hyper = {version ="0.14.4", features = ["client", "server", "tcp"]}
-hyper-staticfile = "0.6"
+hyper-staticfile = "0.8"
 hyper-websocket-lite = "0.5"
 websocket-codec = "0.5"
 digest_auth = "0.3.0"
