--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,70 +43,70 @@ jobs:
           path: |
             electron/dist
           if-no-files-found: warn
-#
-#  build-amd64:
-#    runs-on: ubuntu-latest
-#    needs:
-#      - build-web
-#    steps:
-#      # Checkout
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#
-#      - name: Fix cargo config
-#        run: sed -e "s/.*replace-with.*//g" -i .cargo/config
-#
-#      # Download web
-#      - name: Upload artifacts
-#        uses: actions/download-artifact@v3
-#        with:
-#          name: pisugar-web
-#          path: |
-#            electron/dist
-#          if-no-files-found: warn
-#
-#      # Rust cache
-#      - name: Rust cargo cache
-#        uses: actions/cache@v1
-#        with:
-#          path: |
-#            ~/.cargo
-#            target
-#          key: ${{ runner.os }}-build-amd64
-#
-#      # Rust toolchain
-#      - name: Rust toolchain
-#        uses: actions-rs/toolchain@v1
-#        with:
-#          toolchain: stable
-#          target: x86_64-unknown-linux-gnu
-#
-#      # Build
-#      - name: Rust build
-#      - run: |
-#          sudo apt update && sudo apt install -y rpm
-#          cargo install cargo-deb
-#          cargo install cargo-rpm
-#          cargo build --target x86_64-unknown-linux-gnu --release
-#          for app in server poweroff programmer; do
-#            cargo deb --target x86_64-unknown-linux-gnu --manifest-path=pisugar-$app/Cargo.toml
-#            (cd pisugar-$app && cargo rpm build --target x86_64-unknown-linux-gnu)
-#          done
-#
-#      # Upload artifact
-#      - name: Upload artifact
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: pisugar-amd64
-#          path: |
-#            target/x86_64-unknown-linux-gnu
-#            !target/**/.fingerprint
-#            !target/**/build
-#            !target/**/deps
-#            !target/**/examples
-#            !target/**/incremental
-#          if-no-files-found: warn
-#
+
+  build-amd64:
+    runs-on: ubuntu-latest
+    needs:
+      - build-web
+    steps:
+      # Checkout
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Fix cargo config
+        run: sed -e "s/.*replace-with.*//g" -i .cargo/config
+
+      # Download web
+      - name: Upload artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: pisugar-web
+          path: |
+            electron/dist
+          if-no-files-found: warn
+
+      # Rust cache
+      - name: Rust cargo cache
+        uses: actions/cache@v1
+        with:
+          path: |
+            ~/.cargo
+            target
+          key: ${{ runner.os }}-build-amd64
+
+      # Rust toolchain
+      - name: Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: x86_64-unknown-linux-gnu
+
+      # Build
+      - name: Rust build
+      - run: |
+          sudo apt update && sudo apt install -y rpm
+          cargo install cargo-deb
+          cargo install cargo-rpm
+          cargo build --target x86_64-unknown-linux-gnu --release
+          for app in server poweroff programmer; do
+            cargo deb --target x86_64-unknown-linux-gnu --manifest-path=pisugar-$app/Cargo.toml
+            (cd pisugar-$app && cargo rpm build --target x86_64-unknown-linux-gnu)
+          done
+
+      # Upload artifact
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: pisugar-amd64
+          path: |
+            target/x86_64-unknown-linux-gnu
+            !target/**/.fingerprint
+            !target/**/build
+            !target/**/deps
+            !target/**/examples
+            !target/**/incremental
+          if-no-files-found: warn
+
 #  build-arm:
 #    runs-on: ubuntu-latest
 #    needs:
