--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,17 +44,17 @@ jobs:
             electron/dist
           if-no-files-found: warn
 
-#  build-amd64:
-#    runs-on: ubuntu-latest
-#    needs:
-#      - build-web
-#    steps:
-#      # Checkout
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#
-#      - name: Fix cargo config
-#        run: sed -e "s/.*replace-with.*//g" -i .cargo/config
+  build-amd64:
+    runs-on: ubuntu-latest
+    needs:
+      - build-web
+    steps:
+      # Checkout
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Fix cargo config
+        run: sed -e "s/.*replace-with.*//g" -i .cargo/config
 #
 #      # Download web
 #      - name: Upload artifacts
