--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,24 +74,24 @@ jobs:
             target
           key: ${{ runner.os }}-build-amd64
 
-#      # Rust toolchain
-#      - name: Rust toolchain
-#        uses: actions-rs/toolchain@v2
-#        with:
-#          toolchain: stable
-#          target: x86_64-unknown-linux-gnu
-#
-#      # Build
-#      - name: Rust build
-#      - run: |
-#          sudo apt update && sudo apt install -y rpm
-#          cargo install cargo-deb
-#          cargo install cargo-rpm
-#          cargo build --target x86_64-unknown-linux-gnu --release
-#          for app in server poweroff programmer; do
-#            cargo deb --target x86_64-unknown-linux-gnu --manifest-path=pisugar-$app/Cargo.toml
-#            (cd pisugar-$app && cargo rpm build --target x86_64-unknown-linux-gnu)
-#          done
+      # Rust toolchain
+      - name: Rust toolchain
+        uses: actions-rs/toolchain@v2
+        with:
+          toolchain: stable
+          target: x86_64-unknown-linux-gnu
+
+      # Build
+      - name: Rust build
+      - run: |
+          sudo apt update && sudo apt install -y rpm
+          cargo install cargo-deb
+          cargo install cargo-rpm
+          cargo build --target x86_64-unknown-linux-gnu --release
+          for app in server poweroff programmer; do
+            cargo deb --target x86_64-unknown-linux-gnu --manifest-path=pisugar-$app/Cargo.toml
+            (cd pisugar-$app && cargo rpm build --target x86_64-unknown-linux-gnu)
+          done
 #
 #      # Upload artifact
 #      - name: Upload artifact
