--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -7,3 +7,66 @@ on:
 jobs:
   build-all:
     uses: ./.github/workflows/build.yml
+
+  dev-release:
+    runs-on: ubuntu-latest
+    needs:
+      - build-all
+    steps:
+      # Checkout
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Fix cargo config
+        run: sed -e "s/.*replace-with.*//g" -i .cargo/config
+
+      - name: Download all
+        uses: actions/download-artifact@v3
+        with:
+          name: pisugar-all
+          path: |
+            target
+
+      # Development Release
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          title: "Development Build"
+          prerelease: true
+          draft: false
+          files: |
+            target/*
+
+      # Upload QiNiu nightly
+      - name: "Upload to QiNiu"
+        env:
+          QINIU_BUCKET: ${{ secrets.QINIU_BUCKET }}
+          QINIU_AK: ${{ secrets.QINIU_AK }}
+          QINIU_SK: ${{ secrets.QINIU_SK }}
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y unzip
+          
+          if [ $(uname -m) == 'x86_64' ]; then
+            wget http://devtools.qiniu.com/qshell-linux-x64-v2.4.1.zip
+            unzip qshell-linux-x64-v2.4.1.zip
+            mv qshell-linux-x64-v2.4.1 qshell
+          else
+            wget http://devtools.qiniu.com/qshell-linux-x86-v2.4.1.zip
+            unzip qshell-linux-x86-v2.4.1.zip
+            mv qshell-linux-x86-v2.4.1 qshell
+          fi
+          chmod +x qshell
+          ./qshell account -w ${QINIU_AK} ${QINIU_SK} deploy-account
+          
+          for f in $(find target -type f -name '*.deb') $(find target -type f -name '*.rpm') $(find scripts -name '*.tar.gz'); do
+            filename=${f##*/}
+            key=nightly/${filename}
+            ./qshell rput --overwrite ${QINIU_BUCKET} ${key} ${f}
+          done
+          for f in $(find scripts -name '*.sh' ); do
+            filename=${f##*/}
+            key=nightly/${filename}
+            ./qshell rput --overwrite --mimetype text/plain ${QINIU_BUCKET} ${key} ${f}
+          done
